--- a/frontend/src/pages/courses/course.module.css
+++ b/frontend/src/pages/courses/course.module.css
@@ -28,6 +28,11 @@
 	color: grey;
 }
 
+.leftContainer p:hover {
+	color: #404040;
+	font-weight: 500;
+}
+
 .coursesContainer {
 	display: flex;
 	flex-wrap: wrap;
