--- a/frontend/src/pages/lesson/lesson.module.css
+++ b/frontend/src/pages/lesson/lesson.module.css
@@ -1,38 +1,41 @@
-
 .container {
-    font-family: "Inter", sans-serif;
-    padding: 20px 25%;
-    color: #666;
-    font-size: 16px;
-    line-height: 1.4;
-    font-weight: 400;
+	font-family: "Inter", sans-serif;
+	padding: 20px 25%;
+	color: #666;
+	font-size: 16px;
+	line-height: 1.4;
+	font-weight: 400;
 }
 
 .container h2 {
-    color : #222;
+	color: #222;
 }
 
 th {
-    text-align: center;
-    padding: 3px 6px ;
-    color : white;
-    background-color: black;
+	text-align: center;
+	padding: 3px 6px;
+	color: white;
+	background-color: black;
 }
 
 .container img {
-    /* text-align: justify; */
-    margin : 0 auto;
-    display: block;
+	/* text-align: justify; */
+	margin: 0 auto;
+	display: block;
 }
 
 table {
-    
-    /* margin: 0 auto; */
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	/* margin: 0 auto; */
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 tr:hover {
-    background-color: #E0E0E0;
+	background-color: #e0e0e0;
+}
+
+.btnContainer {
+	display: flex;
+	justify-content: space-between;
 }
