--- a/frontend/src/components/chatbot/chatbot.module.css
+++ b/frontend/src/components/chatbot/chatbot.module.css
@@ -6,11 +6,14 @@
 	bottom: 20px;
 	right: 20px;
 	z-index: 999; /* Ensure it's above other content */
+	box-shadow: 5px 5px 5px lightslategray;
 }
 
 .container {
+	-webkit-transition: width 0.5s ease-in-out;
+	transition: width 0.5s ease-in-out;
 	width: 350px;
-	height: 80vh;
+	height: 90vh;
 	background-color: #fff;
 	border: 1px solid #ccc;
 	border-radius: 5px;
@@ -31,22 +34,35 @@
 	display: flex;
 	flex-direction: column;
 	overflow: auto;
+	gap: 10px;
 	width: 95%;
 	height: 80%;
 	margin-bottom: 0;
+	padding: 10px;
+}
+.chat span {
+	/* width: fit-content; */
+	padding: 0 10px;
+	width: fit-content;
 }
 
 .user {
-	border-radius: 10px;
 	background-color: pink;
-	align-items: flex-end;
+	align-self: flex-end;
 	text-align: right;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
 }
 
 .model {
+	border-top-right-radius: 10px;
+	border-bottom-left-radius: 10px;
+	border-bottom-right-radius: 10px;
+
 	text-align: left;
 	background-color: orange;
-	align-items: flex-start;
+	align-self: flex-start;
 }
 
 .circle {
@@ -79,6 +95,11 @@
 	width: 83%;
 	border: none;
 	border-right: 2px solid lightblue;
+	padding: 2px 10px;
+}
+
+.promptInput:focus {
+	background-color: whitesmoke;
 }
 
 .send {
