--- a/frontend/src/components/chatbot/chatbot.module.css
+++ b/frontend/src/components/chatbot/chatbot.module.css
@@ -1,7 +1,8 @@
 /* Add this CSS to your App.css or any other CSS file */
 
 .chatbotContainer {
-	background-color: beige;
+	background-color: #f5f5dc;
+	border-radius: 10px;
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
@@ -25,6 +26,7 @@
 
 .close {
 	align-self: flex-end;
+	margin-right: 5px;
 }
 
 .chat {
@@ -67,13 +69,13 @@
 }
 
 .circle {
-	width: 60px;
-	height: 60px;
+	width: 80px;
+	height: 80px;
 	/* background-color: blue;  */
 	border-radius: 50%;
 	position: fixed;
 	bottom: 40px;
-	right: 20px;
+	right: 40px;
 	cursor: pointer; /* Change cursor style if needed */
 	z-index: 9999; /* Ensure it's above other content */
 	display: flex;
@@ -85,7 +87,8 @@
 
 .inputContainer {
 	display: flex;
-	width: 329px;
+	width: 350px;
+
 	height: 6vh;
 	border: 2px solid lightblue;
 	border-bottom-left-radius: 10px;
@@ -93,7 +96,7 @@
 }
 
 .promptInput {
-	width: 83%;
+	width: 100%;
 	border: none;
 	border-right: 2px solid lightblue;
 	padding: 2px 10px;
