goals bugs fixed

--- a/frontend/src/pages/finance-goals/goals.module.css
+++ b/frontend/src/pages/finance-goals/goals.module.css
@@ -17,3 +17,8 @@
 	overflow: scroll;
 	overflow-y: visible;
 }
+
+.createGoalBtn:hover {
+	transform: translateY(-2px);
+	background-color: lightblue;
+}
