--- a/frontend/src/pages/Blogs/BlogDetails/blogDetails.module.css
+++ b/frontend/src/pages/Blogs/BlogDetails/blogDetails.module.css
@@ -1,25 +1,20 @@
-
-.container{
-    display: flex;
-    padding: 40px;
-    gap :30px;
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
+.container {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	padding: 40px 100px;
+	height: 100vh;
 }
 
-.container h4 {
-    margin: 0;
-    width: 50%;
-    text-align: center;
-    padding: 0px 10px;
+.blogActions {
+	align-self: flex-end;
+	display: flex;
+	gap: 5px;
 }
 
-.container img {
-    height: 400px;
-    min-width: 45%;
-}
-
-.container p {
-    padding: 0 100px;
+.blogContainer {
+	width: 100%;
+	height: 90%;
+	border: 1px solid black;
 }
