--- a/frontend/src/pages/Blogs/createBlog/createBlog.module.css
+++ b/frontend/src/pages/Blogs/createBlog/createBlog.module.css
@@ -2,7 +2,7 @@
 	display: flex;
 	flex-direction: column;
 	padding: 20px;
-	gap: 0;
+	gap: 10px;
 	height: 100vh;
 }
 
@@ -26,18 +26,19 @@
 
 .row {
 	height: 90%;
-	
 	display: flex;
-	width: 100%;
+	justify-content: center;
+	width: 90vw;
 }
 
 .editor,
 .preview {
 	height: 80%;
 	max-height: none;
-	width: 50%;
+	width: 80vw;
 }
 
 .preview {
 	padding: 0 10px;
+	border: 1px solid black;
 }
