blog image upload done

--- a/frontend/src/pages/Blogs/createBlog/createBlog.module.css
+++ b/frontend/src/pages/Blogs/createBlog/createBlog.module.css
@@ -40,5 +40,7 @@
 
 .preview {
 	padding: 0 10px;
-	border: 1px solid black;
+	border-radius: 10px;
+	border: 2px solid #dcdcdc;
+	/* background-color: #dcdcdc; */
 }
