--- a/frontend/src/pages/Blogs/BlogDetails/blogDetails.module.css
+++ b/frontend/src/pages/Blogs/BlogDetails/blogDetails.module.css
@@ -14,7 +14,9 @@
 }
 
 .blogContainer {
+	border-radius: 10px;
+	background-color: #dcdcdc;
 	width: 100%;
 	height: 90%;
-	border: 1px solid black;
+	/* border: 1px solid black; */
 }
