home page ui done

--- a/frontend/src/pages/Blogs/BlogDetails/blogDetails.module.css
+++ b/frontend/src/pages/Blogs/BlogDetails/blogDetails.module.css
@@ -20,3 +20,11 @@
 	height: 90%;
 	/* border: 1px solid black; */
 }
+
+.author {
+	align-self: flex-end;
+}
+
+.author span {
+	letter-spacing: -2px;
+}
