--- a/frontend/src/pages/finance-goals/goals.module.css
+++ b/frontend/src/pages/finance-goals/goals.module.css
@@ -18,6 +18,15 @@
 	overflow-y: visible;
 }
 
+.goalsIllustrationContainer {
+	align-self: flex-end;
+	margin-left: 100px;
+}
+
+.goalsIllustrationContainer img {
+	height: 350px;
+}
+
 .createGoalBtn:hover {
 	transform: translateY(-2px);
 	background-color: lightblue;
