--- a/frontend/src/pages/new-dashboard/dashboard.module.css
+++ b/frontend/src/pages/new-dashboard/dashboard.module.css
@@ -1,5 +1,5 @@
 .homeComponent {
-	padding: 100px;
+	padding: 1px 100px;
 }
 
 .dashboardTitle {
@@ -70,4 +70,15 @@
 	background-color: grey;
 	display: flex;
 	width: 100%;
+}
+
+.blogsSectionContainer {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	padding: 20px 40px;
+}
+
+.blogsSectionImage img {
+	/* height: 300px; */
 }
