ui changes throughout the app

--- a/frontend/src/pages/Blogs/createBlog/createBlog.module.css
+++ b/frontend/src/pages/Blogs/createBlog/createBlog.module.css
@@ -10,8 +10,8 @@
 	height: 5%;
 	width: 25%;
 	align-self: center;
-	text-align: center;
-	padding: 10px;
+	/* text-align: center; */
+
 	background-color: #06d6a0;
 	border-radius: 10px;
 	border: none;
