--- a/frontend/src/pages/Blogs/blog.module.css
+++ b/frontend/src/pages/Blogs/blog.module.css
@@ -21,7 +21,7 @@
 	background-color: #06d6a0;
 	/* color: white; */
 	font-weight: bold;
-	/* border: 1px solid white; */
+	border: 2px solid #dcdcdc;
 	border-radius: 10px;
 }
 
